--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -25,10 +25,10 @@ layout: layouts/telesthesia-base.njk
   });
 
 // Add a click listener to the map
-map.on('click', function(event) {
+map.on('click', function(e) {
   // Get the latitude and longitude of the click event
-  var lat = event.latlng.lat;
-  var lng = event.latlng.lng;
+  var lat = e.lngLat.lat;
+  var lng = e.lngLat.lng;
 
   // Send the latitude and longitude to the checklocation function
   checklocation(lat, lng);
