--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -19,7 +19,8 @@ layout: layouts/telesthesia-base.njk
     mapboxgl.accessToken = 'pk.eyJ1IjoidGhlYm95ZGF2aWQiLCJhIjoiY2twM3MzcWdxMGVibzJ1bGV6bnp5NHpjZiJ9.OcASP9pRFCNQEAeBzKEtxA';
   const map = new mapboxgl.Map({
     container: 'map', // The ID of the div element to hold the map
-    style: 'mapbox://styles/mapbox/streets-v11', // The Mapbox style to use
+    style: 'mapbox://styles/theboydavid/ckp4183ve7x8f18k8ftffl277',
+//    style: 'mapbox://styles/mapbox/streets-v11', // The Mapbox style to use
     center: [-0.0738,51.5041], // The center point of the map
     zoom: 12 // The zoom level of the map
   });
