--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -3,7 +3,9 @@ layout: layouts/telesthesia-base.njk
 ---
 
     <!-- Create a div element to hold the map -->
+    <div id="mapcontainer">
     <div id="map"></div>
+    </div>
 
      <div id="console">
         <div id="console__image"></div>
