--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -11,7 +11,7 @@
             padding: 0;
             margin: 0;
         }
-        html, body, main, #map {
+        html, body, main, #map, #mapcontainer {
             height: 100%;
             width: 100%;
         }
