--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -9,7 +9,7 @@ layout: layouts/telesthesia-base.njk
 
      <div id="console">
         <div id="console__image"></div>
-        <div id="console__text typist"></div>
+        <div id="console__text"></div>
     </div>
 
     <!-- Include the Leaflet JavaScript file -->
