--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -271,6 +271,7 @@ if (data.image) {
 
 // Check for text in the response data
 if (data.text) {
+  console.log('there is text');
   var str = data.text;
   // Create a text node with the text field from the response data
  // const textNode = document.createTextNode(data.text);
