--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -84,7 +84,7 @@ if (data.text) {
   // Add the text node to the console__text div
 //  document.getElementById('console__text').appendChild(textNode);
 
-var termynal = new Termynal('#console__image',
+var termynal = new Termynal('#console__text',
     {
         lineData: [
             { type: 'input', value: textNode }
