--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -81,6 +81,7 @@ if (data.text) {
   // Create a text node with the text field from the response data
   const textNode = document.createTextNode(data.text);
   console.log(data.text);
+  console.log(textNode);
 
   // Add the text node to the console__text div
 //  document.getElementById('console__text').appendChild(textNode);
