--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -89,7 +89,7 @@ if (data.text) {
 var termynal = new Termynal('#console__text',
     {
         lineData: [
-            { type: 'input', value: textNode }
+            { type: 'input', value: data.text }
         ]
     }
 )
