--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -19,15 +19,15 @@
           z-index:0;
         }
         #console {
-          position: fixed; bottom: 0; left: 0; right: 0; height: 80px; background-color: white;z-index:1;padding:20px;display:flex;
+          position: fixed; bottom: 0; left: 0; right: 0; height: 80px; background-color: black;z-index:1;padding:20px;display:flex;
         }
           #console__image {
         flex: 0 0 20%; /* Set the flex basis to 20% and allow the element to shrink or grow */
         max-width: 100px; /* Set a maximum width of 100px */
-        background-color: blue; /* Set the background color to blue */
       }
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
+        color: #44f293;
       }
 
 
