--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -17,6 +17,23 @@
         }
         #map {
           z-index:0;
+          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(440%) contrast(70%);
+          filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(440%) contrast(70%);
+
+        }
+        #map::after {
+            content: "";
+  background-image: radial-gradient(#4d5e69 1px, transparent 0);
+  background-size: 40px 40px;
+  background-position: -19px -19px;
+  width: 100%;
+  height: 100vh;
+  z-index: 9999;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.5;
         }
         #console {
           position: fixed; bottom: 0; left: 0; right: 0; height: 80px; background-color: black;z-index:1;padding:20px;display:flex;
