--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -45,7 +45,11 @@
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
         color: #44f293;
-      }
+       }
+        #mapcontainer {
+padding: 10px;
+    background: #000;
+        }
 
 
       /**
