--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -38,15 +38,23 @@
   opacity: 0.5;
         }
         #console {
-          position: fixed; bottom: 0; left: 0; right: 0; height: 80px; background-color: black;z-index:1;padding:20px;display:flex;
-        }
+position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 20px;
+    background-color: #264e4a;
+    z-index: 1;
+    padding: 20px;
+    display: flex;
+    font-size: 12px;        }
           #console__image {
         flex: 0 0 20%; /* Set the flex basis to 20% and allow the element to shrink or grow */
         max-width: 100px; /* Set a maximum width of 100px */
       }
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
-        color: #266861;
+        color: #26d9d6;
        }
         #mapcontainer {
 
