--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -64,7 +64,7 @@ async function checklocation(lat, lng) {
 
 // Remove any existing elements from the console__image and console__text elements
 document.getElementById('console__image').innerHTML = '';
-document.getElementById('console__text').innerHTML = '';
+document.getElementById('console__text').innerHTML = ' ▋ ';
 
 // Check for image in the response data
 if (data.image) {
