--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -16,6 +16,7 @@
         html, body, main, #map, #mapcontainer {
             height: 100%;
             width: 100%;
+            overflow: hidden;
         }
         #map {
           z-index:0;
@@ -57,62 +58,12 @@ position: fixed;
         color: #1e3d3a;
        }
         #mapcontainer {
--webkit-backface-visibility: hidden;
--webkit-background-clip: border-box;
--webkit-background-origin: padding-box;
--webkit-background-size: auto;
--webkit-user-select: none;
-background-attachment: fixed;
-background-clip: border-box;
-background-color: rgba(0, 0, 0, 0);
-background-image: none;
-background-origin: padding-box;
-background-size: auto;
-border-bottom-color: rgb(255, 255, 255);
-border-bottom-style: none;
-border-bottom-width: 0px;
-border-image-outset: 0px;
-border-image-repeat: stretch;
-border-image-slice: 100%;
-border-image-source: none;
-border-image-width: 1;
-border-left-color: rgb(255, 255, 255);
-border-left-style: none;
-border-left-width: 0px;
-border-right-color: rgb(255, 255, 255);
-border-right-style: none;
-border-right-width: 0px;
-border-top-color: rgb(255, 255, 255);
-border-top-style: none;
-border-top-width: 0px;
-color: rgb(255, 255, 255);
-cursor: -webkit-grab;
-display: block;
-height: 	100%;
-left: 0px;
-letter-spacing: 1px;
-line-height: 16px;
-margin-bottom: 0px;
-margin-left: 0px;
-margin-right: 0px;
-margin-top: 0px;
-outline-color: rgb(255, 255, 255);
-outline-offset: -15px;
-outline-style: solid;
-outline-width: 15px;
-padding-bottom: 0px;
-padding-left: 0px;
-padding-right: 0px;
-padding-top: 0px;
-pointer-events: none;
-position: fixed;
-top: 0px;
-vertical-align: baseline;
-width: 100%;
-z-index: 100;
-zoom: 1;
-        }
 
+        }
+main {
+  border: 30px solid #294d4a;
+    box-sizing: border-box;
+}
 
       /**
  * termynal.js
