--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -55,7 +55,7 @@ position: fixed;
       }
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
-        color: #1e3d3a;
+        color: #26d9d6;
        }
         #mapcontainer {
 
