--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -57,6 +57,9 @@ position: fixed;
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
         color: #26d9d6;
        }
+       #console__text::before {
+        content: 'Telesthesia: '
+       }
         #mapcontainer {
 
         }
