--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -8,7 +8,7 @@ layout: layouts/telesthesia-base.njk
     </div>
 
      <div id="console">
-        <div id="console__text"></div>
+        <div id="console__text">Telesthesia: </div>
         <div id="console__image"></div>
     </div>
 
@@ -31,8 +31,6 @@ map.on('click', function(e) {
   // Get the latitude and longitude of the click event
   var lat = e.lngLat.lat;
   var lng = e.lngLat.lng;
-  console.log('the lat is' + lat);
-  console.log(lat, lng);
 
   // Send the latitude and longitude to the checklocation function
   checklocation(lat, lng);
@@ -64,7 +62,7 @@ async function checklocation(lat, lng) {
 
 // Remove any existing elements from the console__image and console__text elements
 document.getElementById('console__image').innerHTML = '';
-document.getElementById('console__text').innerHTML = ' ▋ ';
+document.getElementById('console__text').innerHTML = 'Telesthesia: ▋ ';
 
 // Check for image in the response data
 if (data.image) {
@@ -89,7 +87,7 @@ if (data.text) {
 var termynal = new Termynal('#console__text',
     {
         lineData: [
-            { type: 'input', value: data.text }
+            { type: 'input', value: 'Telesthesia: ' + data.text }
         ]
     }
 )
