--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -8,7 +8,8 @@ layout: layouts/telesthesia-base.njk
     </div>
 
      <div id="console">
-        <div id="console__text">Telesthesia: </div>
+      <div id="console__text-pre">Telesthesia :</div>
+        <div id="console__text"></div>
         <div id="console__image"></div>
     </div>
 
@@ -62,7 +63,7 @@ async function checklocation(lat, lng) {
 
 // Remove any existing elements from the console__image and console__text elements
 document.getElementById('console__image').innerHTML = '';
-document.getElementById('console__text').innerHTML = 'Telesthesia: ▋ ';
+document.getElementById('console__text').innerHTML = ' ▋ ';
 
 // Check for image in the response data
 if (data.image) {
@@ -87,7 +88,7 @@ if (data.text) {
 var termynal = new Termynal('#console__text',
     {
         lineData: [
-            { type: 'input', value: 'Telesthesia: ' + data.text }
+            { type: 'input', value: data.text }
         ]
     }
 )
