--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -20,8 +20,8 @@
         }
         #map {
           z-index:0;
-          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(440%) contrast(70%);
-          filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(440%) contrast(70%);
+          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(700%) contrast(75%);
+          filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(700%) contrast(75%);
 
         }
         #map::after {
@@ -44,7 +44,7 @@ position: fixed;
     left: 0;
     right: 0;
     height: 20px;
-    background-color: #264e4a;
+    background-color: #152827;
     z-index: 1;
     padding: 20px;
     display: flex;
@@ -65,7 +65,7 @@ position: fixed;
 
         }
 main {
-  border: 20px solid #294d4a;
+  border: 20px solid #152827;
     box-sizing: border-box;
 }
 
