--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -20,8 +20,8 @@
         }
         #map {
           z-index:0;
-          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(700%) contrast(75%);
-          filter: brightness(100%) sepia(100%) hue-rotate(125deg) saturate(700%) contrast(75%);
+          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%)
+          filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%)
 
         }
         #map::after {
@@ -44,7 +44,7 @@ position: fixed;
     left: 0;
     right: 0;
     height: 20px;
-    background-color: #152827;
+    background-color: #12393d;
     z-index: 1;
     padding: 20px;
     display: flex;
@@ -55,7 +55,7 @@ position: fixed;
       }
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
-        color: #26d9d6;
+        color: #21f9f9;
        }
         #console__text-pre {
 
@@ -65,7 +65,7 @@ position: fixed;
 
         }
 main {
-  border: 20px solid #152827;
+  border: 20px solid #12393d;
     box-sizing: border-box;
 }
 
