--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -20,8 +20,8 @@
         }
         #map {
           z-index:0;
-          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%)
-          filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%)
+          -webkit-filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%);
+          filter: brightness(100%) sepia(100%) hue-rotate(135deg) saturate(700%) contrast(75%);
 
         }
         #map::after {
