--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -40,8 +40,8 @@
         }
   #console {
     position: fixed;
-    top: 50px;
-    left: 740px;
+    top: 40px;
+    right: 40px;
     min-height: 20px;
     background-color: #154246;
     z-index: 1;
