--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -62,7 +62,7 @@
        }
 
   #console::before {
-    content: "Reply";
+    content: "Telesthesia:";
     display: block;
     position: absolute;
     top: -8px;
