--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -59,6 +59,8 @@
        #console__text {
         flex: 0 0 80%; /* Set the flex basis to 80% and allow the element to shrink or grow */
         color: #21f9f9;
+        line-height: 18px;
+    font-size: 11px;
        }
 
   #console::before {
