--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -125,6 +125,7 @@ main {
     content: '';
     display: inline-block;
     vertical-align: middle;
+    display: none;
 }
 
 [data-ty="input"]:before,
