--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -62,7 +62,7 @@ async function checklocation(lat, lng) {
 
 // Remove any existing elements from the console__image and console__text elements
 document.getElementById('console__image').innerHTML = '';
-document.getElementById('console__text').innerHTML = ' ▋ ';
+document.getElementById('console__text').innerHTML = '';
 
 // Check for image in the response data
 if (data.image) {
@@ -87,7 +87,7 @@ if (data.text) {
 var termynal = new Termynal('#console__text',
     {
         lineData: [
-            { type: 'input', value: data.text }
+            { type: 'input', value: data.lat + ', ' + data.lng + ':', type: 'input', value: data.text }
         ]
     }
 )
