--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -87,7 +87,8 @@ if (data.text) {
 var termynal = new Termynal('#console__text',
     {
         lineData: [
-            { type: 'input', value: data.lat + ', ' + data.lng + ':', type: 'input', value: data.text }
+            { type: 'input', value: data.lat + ', ' + data.lng + ':'} , 
+            {type: 'input', value: data.text }
         ]
     }
 )
