--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -108,6 +108,8 @@ if (data.text) {
       'circle-radius': 10,
       'circle-color': '#ff0000'
     }
+        element: 'circle'
+
   });
 
 var termynal = new Termynal('#console__text',
