--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -150,7 +150,7 @@ main {
             animation: blink 1s infinite;
 }
 
-.circle {
+.circle, .marker {
   width: 20px;
   height: 20px;
   border-radius: 50%;
