--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -108,7 +108,7 @@ if (data.text) {
       'circle-radius': 10,
       'circle-color': '#ff0000'
     }
-        element: 'circle'
+        element: 'marker'
 
   });
 
