--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -107,11 +107,11 @@ if (data.text) {
     paint: {
       'circle-radius': 10,
       'circle-color': '#ff0000'
-    }
-        element: 'marker'
-
+    },
+    // Set the element property to the class name of the marker
+    element: 'marker'
   });
-
+  
 var termynal = new Termynal('#console__text',
     {
         lineData: [
