--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -86,7 +86,8 @@ if (data.text) {
 
 
   // Update the position of the circle using the CSS 'left' and 'top' properties
-  
+    const latLngString = `${lat}${lng}`;
+
     // Create a new source for the marker data
   map.addSource('marker', {
     type: 'geojson',
@@ -101,9 +102,9 @@ if (data.text) {
 
   // Create a new layer for the marker
   map.addLayer({
-    id: 'marker',
+    id: latLngString,
     type: 'circle',
-    source: 'marker',
+    source: latLngString,
     paint: {
       'circle-radius': 10,
       'circle-color': '#ff0000'
@@ -111,7 +112,7 @@ if (data.text) {
     // Set the element property to the class name of the marker
     element: 'marker'
   });
-  
+
 var termynal = new Termynal('#console__text',
     {
         lineData: [
