--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -86,7 +86,7 @@ if (data.text) {
 
 
   // Update the position of the circle using the CSS 'left' and 'top' properties
-    const latLngString = `${lat}${lng}`;
+    const latLngString = `${lat},${lng}`;
 
     // Create a new source for the marker data
   map.addSource('marker', {
