--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -84,6 +84,7 @@ if (data.text) {
   // Add the text node to the console__text div
 //  document.getElementById('console__text').appendChild(textNode);
 
+  const id = Date.now();
 
   // Update the position of the circle using the CSS 'left' and 'top' properties
 
@@ -101,9 +102,9 @@ if (data.text) {
 
   // Create a new layer for the marker
   map.addLayer({
-    id: `marker-${Date.now()}`,
+    id: id,
     type: 'circle',
-    source: `marker-${Date.now()}`,
+    source: id,
     paint: {
       'circle-radius': 10,
       'circle-color': '#ff0000'
