--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -151,6 +151,12 @@ main {
             animation: blink 1s infinite;
 }
 
+.map-marker {
+    width: 20px;
+    heght: 30px;
+    background: whte;
+}
+
 
 /* Cursor animation */
 
