--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -82,7 +82,7 @@ if (data.text) {
   console.log(textNode);
 
   const el = document.createElement('div');
-  el.className = 'marker';
+  el.className = 'map-marker';
 
   // make a marker for each feature and add to the map
   new mapboxgl.Marker(el).setLngLat(feature.geometry.coordinates).addTo(map);
