--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -85,7 +85,7 @@ if (data.text) {
   el.className = 'map-marker';
 
   // make a marker for each feature and add to the map
-  new mapboxgl.Marker(el).setLngLat(feature.geometry.coordinates).addTo(map);
+  new mapboxgl.Marker(el).setLngLat(geometry.coordinates).addTo(map);
 
 var termynal = new Termynal('#console__text',
     {
