--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -8,7 +8,7 @@ layout: layouts/telesthesia-base.njk
     </div>
 
      <div id="console">
-        <div id="console__text">Select a location to search Telesthesia fro relevant data in relation to case #8492</div>
+        <div id="console__text"><span>Ready for input.</span><span>Select a location to search Telesthesia for relevant data in relation to case #8492.</span></div>
         <div id="console__image"></div>
     </div>
 
