--- a/_includes/layouts/telesthesia-base.njk
+++ b/_includes/layouts/telesthesia-base.njk
@@ -63,6 +63,10 @@
     font-size: 11px;
        }
 
+#console__text span {
+    display:block;
+}
+
       #console__text span:first-of-type {
   color: white;
 }
