--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -8,7 +8,7 @@ layout: layouts/telesthesia-base.njk
     </div>
 
      <div id="console">
-        <div id="console__text"><span>Ready for input.</span><span>Select a location to search Telesthesia for relevant data in relation to case #8492.</span></div>
+        <div id="console__text"><span>Ready for input.</span><span>Select a location to search Telesthesia for relevant data in relation to case #8492.`</span></div>
         <div id="console__image"></div>
     </div>
 
@@ -80,6 +80,12 @@ if (data.text) {
   const textNode = document.createTextNode(data.text);
   console.log(data.text);
   console.log(textNode);
+
+   circleMarker = new  L.circle(e.latlng, 200, {
+                color: 'red',
+                fillColor: '#f03',
+                fillOpacity: 0.5
+            }).addTo(map);
 
 var termynal = new Termynal('#console__text',
     {
