--- a/telesthesia/index.njk
+++ b/telesthesia/index.njk
@@ -81,7 +81,7 @@ if (data.text) {
   console.log(data.text);
   console.log(textNode);
 
-   circleMarker = new  L.circle(e.latlng, 200, {
+   circleMarker = new  e.circle(e.latlng, 200, {
                 color: 'red',
                 fillColor: '#f03',
                 fillOpacity: 0.5
